2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	Implement i18n of the .desktop file using intltool.

	* alexandria.desktop:

	Removed, as it is now automatically generated.

	* alexandria.desktop.in:

	This is the old .desktop file, with some fields marked for
	translation.

	* po/genpot.sh:

	Call intltool-extract to generate alexandria.desktop.in.h, and pass
	that file to xgettext.

	* pre-setup.rb:

	Call intltool-merge to generate alexandria.desktop with translations.

	* README:

	Mention the dependency on intltool.

2005-03-19  Dafydd Harries  <daf@muse.19inch.net>

	* ChangeLog,
	  NEWS:

	Convert to UTF-8.

2005-03-14  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog_manual.rb:

	Manually added books were not automatically added in the library in memory.

2005-03-13  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:
	
	Pack the cover as non-expandable in the list view.

=== Alexandria 0.5.0 ===

2005-03-13  Laurent Sansonetti  <lrz@gnome.org>

	* README,
	  NEWS:

	Final tweak for 0.5.0.

2005-03-12  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/icons/alexandria.png,
	  data/alexandria/icons/alexandria_small.png:

	New icon, by Stefanie Dijoux.

	* AUTHORS,
	  lib/alexandria.rb:

	Added Stefanie.

2005-03-12  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:

	Fixed to work again.

2005-03-12  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/bn.rb:
	
	Fixed the regexp once again.

2005-03-11  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:

	Mentions the amazon.[fr|ca] support.

2005-03-09  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added David.

	* README,
	  NEWS:

	Prepared for the upcoming 0.5.0.

2005-03-07  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/glade/main_app.glade,
	  data/alexandria/glade/new_book_dialog.glade:
