@@ -1,5 +1,12 @@
 2005-03-19  Dafydd Harries  <daf@muse.19inch.net>
 
+	* post-clean.rb:
+
+	Add this script in order to remove various automatically generated
+	files.
+
+2005-03-19  Dafydd Harries  <daf@muse.19inch.net>
+
 	Implement i18n of the .desktop file using intltool.
 
 	* alexandria.desktop:
